--- a/release/routers_views_and_templates.html
+++ b/release/routers_views_and_templates.html
@@ -226,7 +226,7 @@ mockups directly in as templates, without modifying them.</p>
     <b class="hl-keyword">var</b> audio = <b class="hl-keyword">this</b>.$(<b class="hl-string"><i style="color:red">'audio'</i></b>);
     audio.empty();
     <b class="hl-keyword">this</b>.model.formats.each(<b class="hl-keyword">function</b>(format) {
-      $(<b class="hl-string"><i style="color:red">"&lt;source&gt;&lt;/source"</i></b>&gt;)
+      $(<b class="hl-string"><i style="color:red">"&lt;source&gt;&lt;/source&gt;"</i></b>)
         .attr(<b class="hl-string"><i style="color:red">"src"</i></b>,  format.get(<b class="hl-string"><i style="color:red">'src'</i></b>))
         .attr(<b class="hl-string"><i style="color:red">"type"</i></b>, format.get(<b class="hl-string"><i style="color:red">'type'</i></b>))
         .appendTo(audio);
@@ -679,6 +679,8 @@ and <code class="literal">CompositeView</code>.</p>
 <div class="section" lang="en">
 <div class="titlepage"><div><div><h3 class="title">
 <a id="_swapping_router"></a>Swapping router</h3></div></div></div>
+<p>TODO: Build out an example in the example_app with swapping router, probably
+task list vs task detail.</p>
 <p>When switching from one view to another, we should clean up the previous view.
 We discussed previously a convention of writing a <code class="literal">view.leave()</code>
 Let’s augment our view to include the ability to clean itself up by "leaving"
@@ -771,7 +773,7 @@ utility functions to allow more class-style inheritance.</p>
 in Backbone, you’re making <span class="strong"><strong>another</strong></span> subclass. The inheritance chain for
 <code class="literal">TasksRouter</code> would then look like:</p>
 <div class="figure">
-<a id="d0e1755"></a><p class="title"><b>Figure 4. Router class inheritance</b></p>
+<a id="d0e1757"></a><p class="title"><b>Figure 4. Router class inheritance</b></p>
 <div class="figure-contents"><div class="mediaobject" align="center"><img src="views_and_templates/router-diagram.png" align="middle" height="200" alt="views_and_templates/router-diagram.png"></div></div>
 </div>
 <br class="figure-break"><p>Phew! Hopefully this adventure into Backbone and JavaScript internals has
@@ -782,6 +784,7 @@ the road for those maintaining your code.</p>
 <div class="section" lang="en">
 <div class="titlepage"><div><div><h3 class="title">
 <a id="_composite_views"></a>Composite views</h3></div></div></div>
+<p>TODO: Build out an example in the example_app with composite views.</p>
 <p>The <code class="literal">SwappingRouter</code> above calls <code class="literal">leave()</code> on the view it currently holds.
 This function is not part of Backbone itself, and is part of our extension
 library to help make views more modular and maintainable. This section goes
