--- a/release/toc.html
+++ b/release/toc.html
@@ -44,7 +44,7 @@
 <a href="book.html#_model_associations"><b>Model associations</b></a><br/>
 <a href="book.html#_filters_and_sorting"><b>Filters and sorting</b></a><br/>
 <a href="book.html#_validations"><b>Validations</b></a><br/>
-<a href="book.html#_nested_resources_chapter_unstarted"><b>Nested resources (chapter unstarted)</b></a><br/>
+<a href="book.html#_model_relationships"><b>Model relationships</b></a><br/>
 <a href="book.html#_duplicating_business_logic_across_the_client_and_server"><b>Duplicating business logic across the client and server</b></a><br/>
 <a href="book.html#_synchronizing_between_clients"><b>Synchronizing between clients</b></a><br/>
 <a href="book.html#_uploading_attachments_chapter_unstarted"><b>Uploading attachments (Chapter unstarted)</b></a><br/>
