--- a/release/rails_integration.html
+++ b/release/rails_integration.html
@@ -195,6 +195,7 @@ done your application.js Sprockets manifest will be as shown below.</p>
 <i class="hl-comment" style="color: silver">//</i>
 <i class="hl-comment" style="color: silver">//= require backbone-forms.js</i>
 <i class="hl-comment" style="color: silver">//= require jquery-ui-editors.js</i>
+<i class="hl-comment" style="color: silver">//= require uploader.js</i>
 <i class="hl-comment" style="color: silver">//</i>
 <i class="hl-comment" style="color: silver">//= require example_app</i>
 <i class="hl-comment" style="color: silver">//</i>
